force-app/main/default/objects/Opportunity/fields/Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Formula__c</fullName>
    <formula>Account.Name</formula>
    <label>Account Name Formula</label>
    <type>Text</type>
</CustomField>