force-app/main/default/objects/Opportunity/fields/Account_Size__c.field-meta.xml
<CustomField>
    <fullName>Account_Size__c</fullName>
    <description>Determined by annual revenue for account. (&gt;$1billion is Enterprise, &lt;$1billion is Mid-Market)</description>
    <formula>TEXT(Account.Account_Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determined by annual revenue for account. (&gt;$1billion is Enterprise, &lt;$1billion is Mid-Market)</inlineHelpText>
    <label>Account Size ($)</label>
    <type>Text</type>
</CustomField>