force-app/main/default/objects/Opportunity/fields/Alternatives__c.field-meta.xml
<CustomField>
    <fullName>Alternatives__c</fullName>
    <description>NA(lternatives)SCAR - Alternatives</description>
    <inlineHelpText>What alternatives does the customer have? (e.g. Sharepoint/Yammer, do nothing)</inlineHelpText>
    <label>Ret&apos;d 6-10-2016 Alternatives for NASCAR</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>