force-app/main/default/objects/Opportunity/fields/Amount_if_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Amount_if_Closed_Won__c</fullName>
    <formula>IF(
(ISPICKVAL( StageName , &quot;8 Closed Won&quot;) || 
ISPICKVAL( StageName , &quot;7 Closed Won&quot;)),
  Amount , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount if Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>