force-app/main/default/objects/Opportunity/fields/Amount_Increase__c.field-meta.xml
<CustomField>
    <fullName>Amount_Increase__c</fullName>
    <formula>(Amount - Prior_Amount_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>