force-app/main/default/objects/Opportunity/fields/Annual_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quota__c</fullName>
    <formula>Owner.Individual_Sales_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>