force-app/main/default/objects/Opportunity/fields/Assets_Added_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Assets_Added_to_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assets Added to Account</label>
    <type>Checkbox</type>
</CustomField>