force-app/main/default/objects/Opportunity/fields/Auto_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Project_Start_Date__c</fullName>
    <formula>CloseDate + 30</formula>
    <label>Earliest Project Start Date</label>
    <type>Date</type>
</CustomField>