force-app/main/default/objects/Opportunity/fields/Bolt_Components_Master_List__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Components_Master_List__c</fullName>
    <description>Links to a listing of which components make up each Bolt</description>
    <formula>HYPERLINK(&quot;https://docs.google.com/spreadsheets/d/1fM7N1hhER-rrK9E5ND81omXV1jTjyYpAcLJKDKVK5ps/edit?usp=sharing&quot;, &quot;Lightning Bolts Lightning Solutions: Content Master&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Links to a listing of which components make up each Bolt</inlineHelpText>
    <label>Bolt Components Master List</label>
    <type>Text</type>
</CustomField>