force-app/main/default/objects/Opportunity/fields/Booked_Project_Margin__c.field-meta.xml
<CustomField>
    <fullName>Booked_Project_Margin__c</fullName>
    <description>Opportunity project margin at close</description>
    <inlineHelpText>Opportunity project margin at close</inlineHelpText>
    <label>Booked Project Margin %</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>