force-app/main/default/objects/Opportunity/fields/Bookings_Projection_2M_Out1__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Projection_2M_Out1__c</fullName>
    <formula>IF(
  AND(
    OR(ISPICKVAL(StageName,&quot;1 Prospect&quot;),ISPICKVAL(StageName,&quot;2 Qualified&quot;),
    ISPICKVAL(StageName,&quot;Opportunity Shaped&quot;)),
  MONTH(CloseDate)=MONTH(TODAY())),
Bookings_Projection__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings Projection 2M Out#1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>