force-app/main/default/objects/Opportunity/fields/Bookings_Projection_2M_Out3__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Projection_2M_Out3__c</fullName>
    <formula>IF(
  AND(
    OR(ISPICKVAL(StageName,&quot;3 Opportunity Shaped&quot;),ISPICKVAL(StageName,&quot;4 Proposal&quot;),
    ISPICKVAL(StageName,&quot;5 Agreements Delivered&quot;),ISPICKVAL(StageName,&quot;6 Negotiating&quot;),
    ISPICKVAL(StageName,&quot;7 Verbal Agreement&quot;)),
  MONTH(CloseDate)=MONTH(TODAY())+2),
Bookings_Projection__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings Projection 2M Out#3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>