force-app/main/default/objects/Opportunity/fields/Bookings_Projection__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Projection__c</fullName>
    <formula>IF(ISPICKVAL(StageName,&quot;1 Prospect&quot;),Amount*0.08,
IF(ISPICKVAL(StageName,&quot;2 Qualified&quot;),Amount*0.18,
IF(ISPICKVAL(StageName,&quot;3 Opportunity Shaped&quot;),Amount*0.28,
IF(ISPICKVAL(StageName,&quot;4 Proposal&quot;),Amount*0.35,
IF(ISPICKVAL(StageName,&quot;5 Agreements Delivered&quot;),Amount*0.64,
IF(ISPICKVAL(StageName,&quot;6 Negotiating&quot;),Amount*0.88,
IF(ISPICKVAL(StageName,&quot;7 Verbal Agreement&quot;),Amount*0.96,
IF(ISPICKVAL(StageName,&quot;8 Closed Won&quot;),Amount, 0))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings Projection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>