force-app/main/default/objects/Opportunity/fields/Bookings_Projection_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Projection_Current_Month__c</fullName>
    <formula>IF(
  AND(
    OR(ISPICKVAL(StageName,&quot;6 Negotiating&quot;),ISPICKVAL(StageName,&quot;7 Verbal Agreement&quot;),
    ISPICKVAL(StageName,&quot;8 Closed Won&quot;)),
  MONTH(CloseDate)=MONTH(TODAY())),Bookings_Projection__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings Projection - Current Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>