force-app/main/default/objects/Opportunity/fields/Bookings_Projection_Next_Month2__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Projection_Next_Month2__c</fullName>
    <formula>IF(
  AND(
    OR(ISPICKVAL(StageName,&quot;4 Proposal&quot;),ISPICKVAL(StageName,&quot;5 Agreements Delivered&quot;),
    ISPICKVAL(StageName,&quot;6 Negotiating&quot;),ISPICKVAL(StageName,&quot;7 Verbal Agreement&quot;)),
  MONTH(CloseDate)=MONTH(TODAY())+1),
Bookings_Projection__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings Projection Next Month#2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>