force-app/main/default/objects/Opportunity/fields/Bookings_Projection_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Projection_Next_Month__c</fullName>
    <formula>Bookings_Projection_Next_Month1__c+Bookings_Projection_Next_Month2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings Projection - Next Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>