force-app/main/default/objects/Opportunity/fields/Budget_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Budget_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified Step 1 of 4</description>
    <inlineHelpText>Identified Step 1 of 4</inlineHelpText>
    <label>Retired - Budget Confirmed</label>
    <type>Checkbox</type>
</CustomField>