force-app/main/default/objects/Opportunity/fields/Business_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Business_Drivers__c</fullName>
    <description>]</description>
    <label>Business Drivers</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>