force-app/main/default/objects/Opportunity/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <label>Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Jive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>