force-app/main/default/objects/Opportunity/fields/Channel_Rep__c.field-meta.xml
<CustomField>
    <fullName>Channel_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter the name of the channel rep.</description>
    <inlineHelpText>Enter the name of the channel rep. If the name is not found, click on the &quot;New&quot; button inside the search box.</inlineHelpText>
    <label>Channel Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>