force-app/main/default/objects/Opportunity/fields/Channel_Rep_Associated__c.field-meta.xml
<CustomField>
    <fullName>Channel_Rep_Associated__c</fullName>
    <formula>IF(ISBLANK(Channel_Rep__c),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Rep Associated</label>
    <type>Checkbox</type>
</CustomField>