force-app/main/default/objects/Opportunity/fields/Channel_Rep_Loyalty_Level__c.field-meta.xml
<CustomField>
    <fullName>Channel_Rep_Loyalty_Level__c</fullName>
    <formula>IF(
Channel_Rep__r.GiftLevelCTR__c=0,NULL,Channel_Rep__r.GiftLevelCTR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Rep Loyalty Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>