force-app/main/default/objects/Opportunity/fields/Channel_Rep_Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Channel_Rep_Shirt_Size__c</fullName>
    <formula>TEXT(Channel_Rep__r.Tshirt_Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Rep Shirt Size</label>
    <type>Text</type>
</CustomField>