force-app/main/default/objects/Opportunity/fields/Client_Presentation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Client_Presentation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified Step 4 of 4</description>
    <inlineHelpText>Identified Step 4 of 4</inlineHelpText>
    <label>Retired - Client Preso Completed</label>
    <type>Checkbox</type>
</CustomField>