force-app/main/default/objects/Opportunity/fields/Close_Plan__c.field-meta.xml
<CustomField>
    <fullName>Close_Plan__c</fullName>
    <label>Close Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>