force-app/main/default/objects/Opportunity/fields/Close_Plan_Created__c.field-meta.xml
<CustomField>
    <fullName>Close_Plan_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when close plan has been created.</description>
    <inlineHelpText>Check this box when close plan has been created.</inlineHelpText>
    <label>Close Plan Created</label>
    <type>Checkbox</type>
</CustomField>