force-app/main/default/objects/Opportunity/fields/Clouds__c.field-meta.xml
<CustomField>
    <fullName>Clouds__c</fullName>
    <formula>IF(INCLUDES(pse__Primary_Project__r.Salesforce_Products__c,&quot;CPQ&quot;),&quot;CPQ;&quot;,null)&amp;
IF(INCLUDES(pse__Primary_Project__r.Salesforce_Products__c,&quot;Sales Cloud&quot;),&quot;Sales Cloud;&quot;, null)&amp;
IF(INCLUDES(pse__Primary_Project__r.Salesforce_Products__c,&quot;Service Cloud&quot;),&quot;Service Cloud;&quot;,null)&amp;
IF(INCLUDES(pse__Primary_Project__r.Salesforce_Products__c,&quot;Sheild&quot;),&quot;Sheild;&quot;,null)&amp;
IF(INCLUDES(pse__Primary_Project__r.Salesforce_Products__c,&quot;Wave&quot;),&quot;Wave;&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clouds</label>
    <type>Text</type>
</CustomField>