force-app/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>For Opportunity Brief</description>
    <inlineHelpText>What is the competitive landscape?  Who is our competition?What  platform(s), what SI&apos;s is customer considering?  Do they have existing relationship with any platform and/or SI today?  Is there consideration for doing the work in-house?</inlineHelpText>
    <label>Competition</label>
    <type>TextArea</type>
</CustomField>