force-app/main/default/objects/Opportunity/fields/Contract_Header__c.field-meta.xml
<CustomField>
    <fullName>Contract_Header__c</fullName>
    <label>Contract Header</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Agreement</fullName>
            </value>
            <value>
                <fullName>IBM (via DOU)</fullName>
            </value>
            <value>
                <fullName>Legacy 7Summits</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>Reverse Blue Rinse</fullName>
            </value>
            <value>
                <fullName>IBM Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>