force-app/main/default/objects/Opportunity/fields/Credit_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Required for all new customer and existing customers with opportunities over $500k</inlineHelpText>
    <label>Credit Check Complete</label>
    <type>Checkbox</type>
</CustomField>