force-app/main/default/objects/Opportunity/fields/Credit_Check_Details__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Details__c</fullName>
    <label>Credit Check Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>