force-app/main/default/objects/Opportunity/fields/Date_of_1st_Created_Opp__c.field-meta.xml
<CustomField>
    <fullName>Date_of_1st_Created_Opp__c</fullName>
    <formula>Account.Date_of_1st_Created_Opp_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of 1st Created Opp</label>
    <type>Date</type>
</CustomField>