force-app/main/default/objects/Opportunity/fields/Date_of_1st_Won_Opp__c.field-meta.xml
<CustomField>
    <fullName>Date_of_1st_Won_Opp__c</fullName>
    <description>This field is calculated in Account view and is the date of 7Summits&apos; first Closed Won opportunity with this account.</description>
    <formula>Account.Date_of_1st_Won_Opp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is calculated in Account view and is the date of 7Summits&apos; first Closed Won opportunity with this account.</inlineHelpText>
    <label>Date of 1st Won Opp</label>
    <type>Date</type>
</CustomField>