force-app/main/default/objects/Opportunity/fields/Decision_Making_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Process__c</fullName>
    <description>Part of Selling Through Curiosity</description>
    <inlineHelpText>What are all the steps in the decision making process? How will we win each step?</inlineHelpText>
    <label>Decision Making Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>