force-app/main/default/objects/Opportunity/fields/Evaluation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Criteria__c</fullName>
    <description>Part of Selling Through Curiosity</description>
    <inlineHelpText>What&apos;s the evaluation criteria?</inlineHelpText>
    <label>Evaluation Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>