force-app/main/default/objects/Opportunity/fields/Executive_Sponsor_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor_Commitment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Proposed Step 2 of 4</description>
    <inlineHelpText>Proposed Step 2 of 4</inlineHelpText>
    <label>Retired - Exec Sponsor Commitment</label>
    <type>Checkbox</type>
</CustomField>