force-app/main/default/objects/Opportunity/fields/Executive_Sponsor_Identified__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified Step 2 of 4</description>
    <inlineHelpText>Identified Step 2 of 4</inlineHelpText>
    <label>Executive Governed</label>
    <type>Checkbox</type>
</CustomField>