force-app/main/default/objects/Opportunity/fields/Force_to_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Force_to_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For NetSuite Administration only; BDD&apos;s, please do not check this box</inlineHelpText>
    <label>Force to NetSuite</label>
    <type>Checkbox</type>
</CustomField>