force-app/main/default/objects/Opportunity/fields/GACLIENTID__c.field-meta.xml
<CustomField>
    <fullName>GACLIENTID__c</fullName>
    <label>GACLIENTID</label>
    <type>TextArea</type>
</CustomField>