force-app/main/default/objects/Opportunity/fields/GATRACKID__c.field-meta.xml
<CustomField>
    <fullName>GATRACKID__c</fullName>
    <label>GATRACKID</label>
    <type>TextArea</type>
</CustomField>