force-app/main/default/objects/Opportunity/fields/Guidance_Pitch_Deck__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Pitch_Deck__c</fullName>
    <inlineHelpText>Link tot he project Guidance or pitch deck.</inlineHelpText>
    <label>Guidance/Pitch Deck</label>
    <type>Url</type>
</CustomField>