force-app/main/default/objects/Opportunity/fields/IBM_7Summits_Resources__c.field-meta.xml
<CustomField>
    <fullName>IBM_7Summits_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this deal require 7Summits resources to be staffed?</inlineHelpText>
    <label>7Summits Resources</label>
    <type>Checkbox</type>
</CustomField>