force-app/main/default/objects/Opportunity/fields/IBM_Amount__c.field-meta.xml
<CustomField>
    <fullName>IBM_Amount__c</fullName>
    <label>IBM Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>