force-app/main/default/objects/Opportunity/fields/IBM_CRM_Link__c.field-meta.xml
<CustomField>
    <fullName>IBM_CRM_Link__c</fullName>
    <inlineHelpText>A link to the CRM record in IBM&apos;s CRM.</inlineHelpText>
    <label>IBM CRM Link</label>
    <type>Url</type>
</CustomField>