force-app/main/default/objects/Opportunity/fields/IBM_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>IBM_Point_of_Contact__c</fullName>
    <inlineHelpText>Who is your point of contact for this deal within IBM?</inlineHelpText>
    <label>IBM Point of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>