force-app/main/default/objects/Opportunity/fields/IBM_Synergy__c.field-meta.xml
<CustomField>
    <fullName>IBM_Synergy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this deal a synergy deal? In other words, are we jointly selling this deal or utilizing assets and offerings across both companies?</inlineHelpText>
    <label>IBM Synergy</label>
    <type>Checkbox</type>
</CustomField>