force-app/main/default/objects/Opportunity/fields/Ideal_Solution_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Solution_Benefits__c</fullName>
    <description>Part of Selling Through Curiosity</description>
    <inlineHelpText>What are the benefits of the ideal solution?</inlineHelpText>
    <label>Ideal Solution Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>