force-app/main/default/objects/Opportunity/fields/Include_In_Weighted_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Weighted_Backlog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Weighted Backlog</label>
    <type>Checkbox</type>
</CustomField>