force-app/main/default/objects/Opportunity/fields/IP_Delivered__c.field-meta.xml
<CustomField>
    <fullName>IP_Delivered__c</fullName>
    <formula>NOT(ISBLANK( IP_Delivery_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Delivered</label>
    <type>Checkbox</type>
</CustomField>