force-app/main/default/objects/Opportunity/fields/IP_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Delivery_Date__c</fullName>
    <label>IP Delivery Date</label>
    <type>Date</type>
</CustomField>