force-app/main/default/objects/Opportunity/fields/IP_Feedback__c.field-meta.xml
<CustomField>
    <fullName>IP_Feedback__c</fullName>
    <inlineHelpText>Please provide positive or constructive feedback on IP related to usability, business fit, customer reaction, demo issues, etc.  This information will assist us in improving our IP offerings.  You may also wish to schedule time with the product team to re</inlineHelpText>
    <label>IP Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>