force-app/main/default/objects/Opportunity/fields/IP_Installation_Notes_Internal__c.field-meta.xml
<CustomField>
    <fullName>IP_Installation_Notes_Internal__c</fullName>
    <description>For any additional notes that should be considered in the IP delivery process</description>
    <inlineHelpText>For any additional notes that should be considered in the IP delivery process</inlineHelpText>
    <label>IP Installation Notes (Internal)</label>
    <type>TextArea</type>
</CustomField>