force-app/main/default/objects/Opportunity/fields/IP_Installation_URL_2__c.field-meta.xml
<CustomField>
    <fullName>IP_Installation_URL_2__c</fullName>
    <description>For a second package (e.g., Knowledge). Use &quot;IP Installation Password&quot; (same as for other URL).</description>
    <inlineHelpText>For a second package (e.g., Knowledge). Use &quot;IP Installation Password&quot; (same as for other URL).</inlineHelpText>
    <label>IP Installation URL 2</label>
    <type>Url</type>
</CustomField>