force-app/main/default/objects/Opportunity/fields/IP_Notification_Recipient__c.field-meta.xml
<CustomField>
    <fullName>IP_Notification_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact that should be the point of contact for a client that has purchased IP.</description>
    <label>IP Notification Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (IP Notification Recipient)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>