force-app/main/default/objects/Opportunity/fields/IP_Purchased_Count__c.field-meta.xml
<CustomField>
    <fullName>IP_Purchased_Count__c</fullName>
    <description>Number of Opportunity Products listed as Product</description>
    <label>IP Purchased Count</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Opp_Prod_Family__c</field>
        <operation>equals</operation>
        <value>Product</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>