force-app/main/default/objects/Opportunity/fields/IP_Revenue_Override_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Revenue_Override_Date__c</fullName>
    <description>Blank implies revenue recognition date = close date. Only update if those dates should differ.</description>
    <inlineHelpText>Blank implies revenue recognition date = close date. Only update if those dates should differ.</inlineHelpText>
    <label>IP Revenue Date Override</label>
    <type>Date</type>
</CustomField>