force-app/main/default/objects/Opportunity/fields/IP_Revenue_Override_Formula__c.field-meta.xml
<CustomField>
    <fullName>IP_Revenue_Override_Formula__c</fullName>
    <formula>IF(ISBLANK(IP_Revenue_Override_Date__c), CloseDate ,IP_Revenue_Override_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Revenue Date Formula</label>
    <type>Date</type>
</CustomField>