force-app/main/default/objects/Opportunity/fields/Jan_50_50_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Jan_50_50_Retirement__c</fullName>
    <formula>IF
(
OR
( 
AND
(
( Owner.LastName = &quot;Hall&quot;),IsWon = True, Date_Created__c &lt; Date(2018,01,01),  CloseDate &gt; Date(2017,12,31),  CloseDate &lt;Date (2018,02,01)),
AND
(
(Owner.LastName = &quot;Saracene&quot;), IsWon = True,Date_Created__c   &lt; Date(2018,01,01),  CloseDate &gt; Date(2017,12,31),  CloseDate &lt;Date (2018,02,01)),
AND
(
( Owner.LastName = &quot;Hogervorst&quot;),IsWon = True, Date_Created__c &lt; Date(2018,01,01),  CloseDate &gt; Date(2017,12,31),  CloseDate &lt;Date (2018,02,01)),
AND
(
( Owner.LastName = &quot;Brown&quot;),IsWon = True, Date_Created__c &lt; Date(2018,01,01),  CloseDate &gt; Date(2017,12,31),  CloseDate &lt;Date (2018,02,01))),( (Amount /  2) - Amount),0)</formula>
    <label>Jan 50/50 Retirement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>